@@ -1,10 +1,13 @@
 /*
 Theme Name: MyKnowledgeBase
 Theme URI: https://www.guido.site/themes
-Version: 6.4
+Version: 6.5
+Requires PHP: 5.6
+Requires at least: 5.2
+Tested up to: 5.4
 Author: Guido
 Author URI: https://www.guido.site
-Description: MyKnowledgeBase is a free, clean, minimalistic, responsive, mobile-friendly WordPress theme. Create a 3 or 4 column Knowledge Base, Bulletin Board, FAQ, Wiki or Link Portal with a custom page template and using the native categories and posts. Features: sidebar, homepage widgets, footer widgets, custom header image, custom background, custom logo to replace site title and tagline, full width page template, dropdown navigation. For more info please check readme file. Enjoy.
+Description: MyKnowledgeBase is a lightweight and mobile-friendly WordPress theme. Personalize your website via the Customizer in your dashboard and by using a custom post or page template. With 2 of the custom page templates you can transform your categories and posts into a Knowledge Base, FAQ, Wiki or Link Portal. It also contains multiple widget areas. Enjoy!
 Tags: one-column, two-columns, right-sidebar, full-width-template, custom-background, custom-header, custom-menu, featured-images, footer-widgets, post-formats, sticky-post, blog, editor-style, microformats, translation-ready
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.html
@@ -226,9 +229,13 @@ button {font-size:inherit; font-family:inherit;}
 #categories-four ul:nth-of-type(4n+4) {margin:0 0 20px 0;}
 
 .cat-name {margin:0 0 5px; padding:0 0 10px; list-style:none; font-size:1.2em; font-weight:bold; border-bottom:2px solid #08a0ff;}
-.cat-name a:hover {text-decoration:none; color:#333;}
+.cat-name a {text-decoration:none;}
+.cat-name a:hover {color:#333; text-decoration:none;}
 .cat-description {padding:5px 0 0;}
 .post-name {margin:0 0 0 20px;}
+.view-all {list-style:none; margin:0 0 0 20px; padding:10px 0 0; font-weight:bold;}
+.view-all a {text-decoration:none;}
+.view-all a:hover {color:#333; text-decoration:none;}
 
 
 /* PAGE */
@@ -298,6 +305,7 @@ img.aligncenter {clear:both; display:block; margin:0.4em auto 0.4em auto;}
 .comment-list .children > li {margin:0 0 0 10px;}
 .comment-body {background:#f8f8f8; border:1px solid #eee; margin:0 0 20px; padding:10px;}
 .comment-content {padding:10px 0;}
+.comment-metadata .edit-link {display:block;}
 .comment-notes, .form-allowed-tags {padding:5px 0; font-size:0.8em;}
 .comments-title, .comment-reply-title, .no-comments {margin:0 0 10px; font-size:1.45em;}
 .comment-author .avatar {margin:0 10px 0 0; border-radius:5px;}
@@ -330,8 +338,6 @@ img.aligncenter {clear:both; display:block; margin:0.4em auto 0.4em auto;}
 /* FOOTER */
 #footer {clear:both; background:#08a0ff; color:#fff;}
 #footer a {color:#fff;}
-#footer .widget {border-bottom:1px solid #fff;}
-#footer .widgettitle {color:#fff;}
 .site-info {clear:both; padding:20px; text-align:center;}
 
 
@@ -340,6 +346,8 @@ img.aligncenter {clear:both; display:block; margin:0.4em auto 0.4em auto;}
 .footer-left {float:left; width:32%; margin:20px 0 0;}
 .footer-middle {float:left; width:32%; margin:20px 2% 0;}
 .footer-right {float:right; width:32%; margin:20px 0 0;}
+#footer .widget {border-bottom:1px solid #fff;}
+#footer .widgettitle {color:#fff;}
 
 
 /* TABLET */
